Collegato js a html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
 </head>
 
 <body>
-
+  <main>
+    <p>Questa è la tua nuova password: <span id="password1"></span></p>
+    <p>Questa è la tua nuova incredibile password: <span id="password2"></span></p>
+    <p>Indovina un po? Già, un altra password per te: <span id="password3"></span></p>
+  </main>
 
   <!-- importazione MIO file di script -->
   <script src="./js/main.js"></script>
