Responsive and done work

--- a/index.html
+++ b/index.html
@@ -17,9 +17,29 @@
 
 <body>
   <main>
-    <p>Questa è la tua nuova password: <span id="password1"></span></p>
-    <p>Questa è la tua nuova incredibile password: <span id="password2"></span></p>
-    <p>Indovina un po? Già, un altra password per te: <span id="password3"></span></p>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-sm-4"><div class="card" style="width:100%;">
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Questa è la tua nuova password</li>
+            <li class="list-group-item" id="password1"></li>
+            
+          </ul>
+        </div></div>
+        <div class="col-md-sm-4"><div class="card" style="width: 100%;">
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Questa è la tua nuova incredibile password</li>
+            <li class="list-group-item" id="password2"></li>
+          </ul>
+        </div></div>
+        <div class="col-md-sm-4"><div class="card" style="width: 100%;">
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Indovina un po? Già, un altra password per te</li>
+            <li class="list-group-item" id="password3"></li>
+          </ul>
+        </div></div>
+      </div>
+    </div>
   </main>
 
   <!-- importazione MIO file di script -->
